[package]
name = "auth-git2"
version = "0.1.1"
description = "Authentication for `git2`"
license = "BSD-2-Clause"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
repository = "https://github.com/de-vri-es/auth-git2-rs"
documentation = "https://docs.rs/auth-git2"
keywords = ["git", "auth", "git2", "authentication", "ssh"]
categories = ["authentication"]

edition = "2021"
publish = ["crates-io"]

[features]
log = ["dep:log"]

[dependencies]
dirs = "5.0.1"
git2 = { version = "0.17.2", default-features = false }
log = { version = "0.4.19", optional = true }
terminal-prompt = "0.2.2"

[dev-dependencies]
assert2 = "0.3.11"
