[package]
name = "auth-git2"
version = "0.4.0"
description = "Authentication for `git2`"
license = "BSD-2-Clause"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
repository = "https://github.com/de-vri-es/auth-git2-rs"
documentation = "https://docs.rs/auth-git2"
keywords = ["git", "auth", "git2", "authentication", "ssh"]
categories = ["authentication"]

edition = "2021"
publish = ["crates-io"]

[features]
log = ["dep:log"]

[dependencies]
dirs = "5.0.1"
git2 = { version = ">0.14, <19.0", default-features = false }
log = { version = "0.4.19", optional = true }
terminal-prompt = "0.2.2"

[dev-dependencies]
assert2 = "0.3.11"
auth-git2 = { path = ".", features = ["log"] }
clap = { version = "4.3.21", features = ["derive"] }
env_logger = "0.10.0"
git2 = ">=0.14, <18.0"
